--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">TruckFest</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -54,10 +54,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#trucks">Meet The Trucks</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#cause">Cause</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#entertainment">Entertainment</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#sponsors">Sponsors</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#donate">Donate</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -78,7 +90,7 @@
                     <div class="intro-text">
                         <span class="name">TruckFest</span>
                         <hr class="star-light">
-                        <span class="skills">Princeton University - <h3> April 16th, 2016 </h3> - Prospect Avenue</span>
+                        <span class="skills">Princeton University - <b> April 16th, 2016 </b>- Prospect Avenue</span>
                     </div>
                 </div>
             </div>
@@ -86,7 +98,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="trucks">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -169,16 +181,143 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>On April 16th, Princeton TruckFest will bring together Princeton University students and the local Princeton community to help support two great causes, Meals on Wheels and Send Hunger Packing, which address food insecurity in our community. This charity event is being hosted by the Community Service Inter-Club Council, in conjunction with the Pace Council for Civic Values. 
+                        <br>
+                        <br>
+                    Prospect Avenue will be closed from Washington Road to Olden Street from 1-5 PM while over 15 food trucks parked in front of the eating clubs serve their signature items.
+                    </p>
                 </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="cause">
+         <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Causes 2016</h2>
+                    <hr class="star-primary">
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+            </div>
+            <div class="row">
+                <div class="col-sm-6 portfolio-item">
+                    <a href="#portfolioModalPack" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/cause/packing.png" class="img-responsive" alt="">
                     </a>
+                </div>
+                <div class="col-sm-6 portfolio-item">
+                    <a href="#portfolioModalMeals" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/cause/meals.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="success" id="entertainment">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>About</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>On April 16th, Princeton TruckFest will bring together Princeton University students and the local Princeton community to help support two great causes, Meals on Wheels and Send Hunger Packing, which address food insecurity in our community. This charity event is being hosted by the Community Service Inter-Club Council, in conjunction with the Pace Council for Civic Values. 
+                        <br>
+                        <br>
+                    Prospect Avenue will be closed from Washington Road to Olden Street from 1-5 PM while over 15 food trucks parked in front of the eating clubs serve their signature items.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="sponsors">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Contact Me</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+                    <form name="sentMessage" id="contactForm" novalidate>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Name</label>
+                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Email Address</label>
+                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Phone Number</label>
+                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Message</label>
+                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <br>
+                        <div id="success"></div>
+                        <div class="row">
+                            <div class="form-group col-xs-12">
+                                <button type="submit" class="btn btn-success btn-lg">Send</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="success" id="donate">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>About</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>On April 16th, Princeton TruckFest will bring together Princeton University students and the local Princeton community to help support two great causes, Meals on Wheels and Send Hunger Packing, which address food insecurity in our community. This charity event is being hosted by the Community Service Inter-Club Council, in conjunction with the Pace Council for Civic Values. 
+                        <br>
+                        <br>
+                    Prospect Avenue will be closed from Washington Road to Olden Street from 1-5 PM while over 15 food trucks parked in front of the eating clubs serve their signature items.
+                    </p>
                 </div>
             </div>
         </div>
@@ -516,7 +655,56 @@
             </div>
         </div>
     </div>
+    <div class="portfolio-modal modal fade" id="portfolioModalPack" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Send Hunger Packing</h2>
+                            <hr class="star-primary">
+                            <img src="img/cause/packing.png" class="img-responsive img-centered" alt="">
+                            <p>The first organization is the  <a target='_blank' href="http://www.shupprinceton.org/">Send Hunger Packing Initiative </a>- a collaboration between the <a target='_blank' href="http://mercerstreetfriends.org/">Mercer Street Friends Food Bank </a> and the <a target='_blank' href="http://www.trentonsoupkitchen.org/">Trenton Area Soup Kitchen (TASK) </a>, which provides low-income schoolchildren with nutritious meal packs for the weekends. Though Princeton is considered a prosperous community, one in eight students in the Princeton public schools are eligible for free or reduced-price school lunches, and can thus participate in this program.</p>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+        <div class="portfolio-modal modal fade" id="portfolioModalMeals" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Meals on Wheels</h2>
+                            <hr class="star-primary">
+                            <img src="img/cause/meals.png" class="img-responsive img-centered" alt="">
+                            <p>The second organization is the <a target='_blank' href="http://www.mowte.org/">Meals on Wheels of Trenton/Ewing </a>, a non-profit organization that provides nutritious meals and other services to homebound locals in efforts to promote their independence, dignity, health and wellbeing. 
+
+The consequences of child and adult hunger are very serious. Children from families that struggle with food insecurity are more likely to do poorly on tests, not attend class, and have difficulty getting along with their peers. Princeton TruckFest recognizes the severity of this social issue and wants to contribute to the fight against it.</p>
+
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
