--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <li class="page-scroll">
                         <a href="#cause">Cause</a>
                     </li>
-                    <li class="page-scroll">
+<!--                     <li class="page-scroll">
                         <a href="#entertainment">Entertainment</a>
-                    </li>
+                    </li> -->
                     <li class="page-scroll">
                         <a href="#sponsors">Sponsors</a>
                     </li>
@@ -72,7 +72,7 @@
                         <a href="#donate">Donate</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#footer">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -226,80 +226,61 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section class="success" id="entertainment">
+    <!-- Entertainment Section -->
+<!--     <section class="success" id="entertainment">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <p>On April 16th, Princeton TruckFest will bring together Princeton University students and the local Princeton community to help support two great causes, Meals on Wheels and Send Hunger Packing, which address food insecurity in our community. This charity event is being hosted by the Community Service Inter-Club Council, in conjunction with the Pace Council for Civic Values. 
-                        <br>
-                        <br>
-                    Prospect Avenue will be closed from Washington Road to Olden Street from 1-5 PM while over 15 food trucks parked in front of the eating clubs serve their signature items.
-                    </p>
-                </div>
-            </div>
         </div>
-    </section>
+    </section> -->
 
-    <!-- Contact Section -->
+    <!-- Sponsors Section -->
     <section id="sponsors">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>Sponsors</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
-                            </div>
-                        </div>
-                    </form>
+                    <p>Thank you so much to our very generous sponsors! TruckFest 2016 would not be possible without you!
+                    </p>
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                <a href="http://princetonprospectfoundation.org/" target='_blank' class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/sponsors/prospect.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="http://www.princeton.edu/main/" target='_blank' class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/sponsors/princeton.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="http://home.edweb.net/" target='_blank' class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/sponsors/edweb.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                     
+            </div>
+            </div>
     </section>
 
     <!-- About Section -->
@@ -307,24 +288,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Donate</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <p>On April 16th, Princeton TruckFest will bring together Princeton University students and the local Princeton community to help support two great causes, Meals on Wheels and Send Hunger Packing, which address food insecurity in our community. This charity event is being hosted by the Community Service Inter-Club Council, in conjunction with the Pace Council for Civic Values. 
-                        <br>
-                        <br>
-                    Prospect Avenue will be closed from Washington Road to Olden Street from 1-5 PM while over 15 food trucks parked in front of the eating clubs serve their signature items.
+               
+                    <p>please email jll2@princeton.edu to make a donation!
                     </p>
-                </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+<!--     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -334,8 +311,6 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -376,40 +351,44 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
-    <footer class="text-center">
+    <footer class="text-center" id= "footer">
         <div class="footer-above">
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <h3>Contant Information</h3>
+
+                        <p> Jennifer Liu <br> jll2@princeton.edu <br> Prospect Avenue<br>Princeton, NJ 08544</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/events/535212963318811/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://www.instagram.com/princetontruckfest/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
                             </li>
-                            <li>
+<!--                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>The Organizers</h3>
+                        <p>Community Service Inter-Club Council
+
+Princeton Prospect Foundation
+
+Princeton University
+
+Inter-Club Council
+
+Pace Council for Civicl Values
+</p>
                     </div>
                 </div>
             </div>
@@ -424,6 +403,42 @@
             </div>
         </div>
     </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll visible-xs visible-sm">
