--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <title>TruckFest Website</title>
 
+    <link rel="shortcut icon" href="img/profile.ico">
+
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
