--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="trucks">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
