jenn: truckfest -> prineton truckfest

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">TruckFest</span>
+                        <span class="name">Princeton TruckFest</span>
                         <hr class="star-light">
                         <span class="skills">Princeton University - <b> April 16th, 2016 </b>- Prospect Avenue</span>
                     </div>
