--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             </div>
             <div class="row">
                
-                    <p>please email jll2@princeton.edu to make a donation!
+                    <p>please email princetontruckfest@gmail.com to make a donation!
                     </p>
             </div>
         </div>
