--- a/index.html
+++ b/index.html
@@ -399,12 +399,14 @@
             <div class="row">
             <h2> Gold </h2>
             <div class="col-sm-6 portfolio-item">
-                <a href="http://princetonprospectfoundation.org/" target='_blank'>
+
+                <a href="http://www.wpst.com/" target='_blank'>
+                    
                         <img src="img/sponsors/945.gif" class="img-responsive" alt="">
                     </a>
                 </div>
                             <div class="col-sm-6 portfolio-item">
-                <a href="http://princetonprospectfoundation.org/" target='_blank'>
+                <a href="http://www.goarmy.com/" target='_blank'>
                         <img src="img/sponsors/usarmy.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
@@ -421,9 +423,9 @@
                 </div>
 
                                 <div class="col-sm-6 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="http://www.landauprinceton.com/" target='_blank'>
 
-                        <img src="img/sponsors/landau.png" class="img-responsive" alt="">
+                        <img src="img/sponsors/land2.png" class="img-responsive" alt="">
                     </a>
                 </div>
 
@@ -433,18 +435,18 @@
             <h4> Bronze </h4>
                 <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="http://www.starbucks.com/store/15915/us/princeton/100-nassau-street-princeton-nj-085424516" target='_blank'>
                                         Starbucks
                     </a>
                 </div>
 
                                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="http://smallworldcoffee.com/" target='_blank'>
 Small World Coffee
                     </a>
                 </div>
                                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="http://www.lushusa.com/" target='_blank'>
 Lush                    </a>
                 </div>
 
@@ -452,36 +454,36 @@ Lush                    </a>
                             <div class="row">
 
                                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="http://www.dandelionjewelry.com/" target='_blank'>
                                         Dandelion
                     </a>
                 </div>
 
                                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="http://www.olssonsfinefoods.com/" target='_blank'>
 Olsson's
                     </a>
                 </div>
                                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="http://www.origins.com/" target='_blank'>
 Origins                    </a>
                 </div>
 
             </div>
                             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="http://www.lululemon.com/stores/us/princeton/princeton" target='_blank'>
                                         Lululemon
                     </a>
                 </div>
 
                                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="https://www.benefitcosmetics.com/us/en" target='_blank'>
 Benefit
                     </a>
                 </div>
                                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://home.edweb.net/" target='_blank'>
+                    <a href="http://www.lamezzaluna.com/" target='_blank'>
 Mezzaluna                    </a>
                 </div>
 
