fix mercer logo

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p>On April 16th, Princeton TruckFest will bring together Princeton University students and the local Princeton community to help support two great causes, Meals on Wheels and Send Hunger Packing, which address food insecurity in our community. This charity event is being hosted by the Community Service Inter-Club Council, in conjunction with the Pace Council for Civic Values. 
+                    <p>On April 16th, Princeton TruckFest will bring together Princeton University students and the local Princeton community to help support two great causes, Meals on Wheels and Mercer Street Friends, which address food insecurity in our community. This charity event is being hosted by the Community Service Inter-Club Council, in conjunction with the Pace Council for Civic Values. 
                         <br>
                         <br>
                     Prospect Avenue will be closed from Washington Road to Olden Street from 1-5 PM while over 15 food trucks parked in front of the eating clubs serve their signature items.
@@ -333,7 +333,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/cause/packing.png" class="img-responsive" alt="">
+                        <img src="img/cause/finalPacking.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-6 portfolio-item">
@@ -401,7 +401,7 @@
             <div class="col-sm-6 portfolio-item">
 
                 <a href="http://www.wpst.com/" target='_blank'>
-                    
+
                         <img src="img/sponsors/945.gif" class="img-responsive" alt="">
                     </a>
                 </div>
@@ -1504,10 +1504,10 @@ Pace Council for Civicl Values
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Send Hunger Packing</h2>
+                            <h2>Mercer Street Friends</h2>
                             <hr class="star-primary">
-                            <img src="img/cause/packing.png" class="img-responsive img-centered" alt="">
-                            <p>The first organization is the  <a target='_blank' href="http://www.shupprinceton.org/">Send Hunger Packing Initiative </a>- a collaboration between the <a target='_blank' href="http://mercerstreetfriends.org/">Mercer Street Friends Food Bank </a> and the <a target='_blank' href="http://www.trentonsoupkitchen.org/">Trenton Area Soup Kitchen (TASK) </a>, which provides low-income schoolchildren with nutritious meal packs for the weekends. Though Princeton is considered a prosperous community, one in eight students in the Princeton public schools are eligible for free or reduced-price school lunches, and can thus participate in this program.</p>
+                            <img src="img/cause/finalPacking.png" class="img-responsive img-centered" alt="">
+                            <p>The first organization a collaboration between  <a target='_blank' href="http://www.shupprinceton.org/">Send Hunger Packing Initiative </a>, the <a target='_blank' href="http://mercerstreetfriends.org/">Mercer Street Friends Food Bank </a> and the <a target='_blank' href="http://www.trentonsoupkitchen.org/">Trenton Area Soup Kitchen (TASK) </a>, which provides low-income schoolchildren with nutritious meal packs for the weekends. Though Princeton is considered a prosperous community, one in eight students in the Princeton public schools are eligible for free or reduced-price school lunches, and can thus participate in this program.</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
