--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ Princeton University
 
 Inter-Club Council
 
-Pace Council for Civicl Values
+Pace Council for Civic Values
 </p>
                     </div>
                 </div>
