--- a/index.html
+++ b/index.html
@@ -508,7 +508,9 @@ Mezzaluna                    </a>
             </div>
             <div class="row">
                
-                    <p>please email princetontruckfest@gmail.com to make a donation!
+                    <p>please donate on our <a href="https://www.tilt.com/tilts/princeton-truckfest-2016" target='_blank'>
+                                       Tilt
+                    </a>  page or email princetontruckfest@gmail.com to make a donation!
                     </p>
             </div>
         </div>
