--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                         <span class="name">Princeton TruckFest</span>
                         <hr class="star-light">
                         <span class="skills">Princeton University - <b> April 16th, 2016 </b>- Prospect Avenue</span>
+                        <br>
+                        
+                        <span class="skills">1 - 5pm</span>
                     </div>
                 </div>
             </div>
