--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <hr class="star-light">
                         <span class="skills">Princeton University - <b> April 16th, 2016 </b>- Prospect Avenue</span>
                         <br>
-                        
+
                         <span class="skills">1 - 5pm</span>
                     </div>
                 </div>
@@ -488,6 +488,22 @@ Benefit
                                 <div class="col-sm-4 portfolio-item">
                     <a href="http://www.lamezzaluna.com/" target='_blank'>
 Mezzaluna                    </a>
+                </div>
+
+            </div>
+
+             <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <a href="https://www.sprint.com/" target='_blank'>
+                                        Sprint
+                    </a>
+                </div>
+
+                                <div class="col-sm-4 portfolio-item">
+
+                </div>
+                                <div class="col-sm-4 portfolio-item">
+
                 </div>
 
             </div>
