--- a/index.html
+++ b/index.html
@@ -1528,7 +1528,12 @@ Pace Council for Civic Values
                             <h2>Mercer Street Friends</h2>
                             <hr class="star-primary">
                             <img src="img/cause/finalPacking.png" class="img-responsive img-centered" alt="">
-                            <p>The first organization a collaboration between  <a target='_blank' href="http://www.shupprinceton.org/">Send Hunger Packing Initiative </a>, the <a target='_blank' href="http://mercerstreetfriends.org/">Mercer Street Friends Food Bank </a> and the <a target='_blank' href="http://www.trentonsoupkitchen.org/">Trenton Area Soup Kitchen (TASK) </a>, which provides low-income schoolchildren with nutritious meal packs for the weekends. Though Princeton is considered a prosperous community, one in eight students in the Princeton public schools are eligible for free or reduced-price school lunches, and can thus participate in this program.</p>
+
+                            <p>
+                            Proceeds from TruckFest 2016 will support the  <a target='_blank' href="http://www.shupprinceton.org/">Send Hunger Packing Initiative </a>, a collaboration between the <a target='_blank' href="http://mercerstreetfriends.org/">Mercer Street Friends Food Bank </a>  and the <a target='_blank' href="http://www.trentonsoupkitchen.org/">Trenton Area Soup Kitchen (TASK) </a> , which provides low-income schoolchildren with nutritious meal packs for the weekends. Though Princeton is considered a prosperous community, one in eight students in the Princeton public schools are eligible for free or reduced-price school lunches, and can thus participate in this program.
+                        </p>
+
+
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -1552,9 +1557,10 @@ Pace Council for Civic Values
                             <h2>Meals on Wheels</h2>
                             <hr class="star-primary">
                             <img src="img/cause/meals.png" class="img-responsive img-centered" alt="">
-                            <p>The second organization is the <a target='_blank' href="http://www.mowte.org/">Meals on Wheels of Trenton/Ewing </a>, a non-profit organization that provides nutritious meals and other services to homebound locals in efforts to promote their independence, dignity, health and wellbeing. 
+                            <p>
 
-The consequences of child and adult hunger are very serious. Children from families that struggle with food insecurity are more likely to do poorly on tests, not attend class, and have difficulty getting along with their peers. Princeton TruckFest recognizes the severity of this social issue and wants to contribute to the fight against it.</p>
+
+Proceeds from TruckFest 2016 will support <a target='_blank' href="http://www.mowte.org/">Meals on Wheels of Trenton/Ewing </a> , a non-profit organization that provides nutritious meals and other services to homebound locals in efforts to promote their independence, dignity, health and wellbeing. The consequences of child and adult hunger are very serious. Children from families that struggle with food insecurity are more likely to do poorly on tests, not attend class, and have difficulty getting along with their peers. Princeton TruckFest recognizes the severity of this social issue and wants to contribute to the fight against it.</p>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
