--- a/index.html
+++ b/index.html
@@ -655,9 +655,9 @@ Pure Barre
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Contant Information</h3>
+                        <h3>Contact Information</h3>
 
-                        <p> Jennifer Liu <br> jll2@princeton.edu <br> Prospect Avenue<br>Princeton, NJ 08544</p>
+                        <p> Cason Crane <br> pccrane@princeton.edu <br> Prospect Avenue<br>Princeton, NJ 08544</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -693,7 +693,7 @@ Pace Council for Civic Values
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
+                        Copyright &copy; TruckFest 2017
                     </div>
                 </div>
             </div>
