--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ Pure Barre
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/events/535212963318811/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/princetontruckfest/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/princetontruckfest/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
