--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/profile.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">Princeton TruckFest</span>
                         <hr class="star-light">
@@ -439,12 +439,12 @@
                         <img src="img/sponsors/edweb.png" class="img-responsive" alt="">
                     </a>
                 </div>
-<!-- 
+
                                 <div class="col-sm-6 portfolio-item">
                     <a href="http://www.landauprinceton.com/" target='_blank'>
 
                         <img src="img/sponsors/land2.png" class="img-responsive" alt="">
-                    </a> -->
+                    </a>
                 </div>
 
 
@@ -453,12 +453,22 @@
 
             <div class="row">
             <h4> Bronze </h4>
-                <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.princeton.edu/main/campuslife/" target='_blank'>
-                                        Princeton University Campus Life
+                <div class="col-sm-6 portfolio-item">
+                <a href="http://campuslife.princeton.edu//" target='_blank' class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                        </div>
+                        <img src="img/sponsors/campuslife.png" class="img-responsive" alt="">
                     </a>
                 </div>
+                <div class="col-sm-6 portfolio-item">
+                    <a href="http://islandspasauna.com/" target='_blank' class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                        </div>
+                        <img src="img/sponsors/islandspa.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                     
+            </div>
 <!-- 
                                 <div class="col-sm-4 portfolio-item">
                     <a href="http://smallworldcoffee.com/" target='_blank'>
