--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             </div>
            
             <div class="row">
-            <!-- <h2> Gold </h2>
+            <h2> Gold </h2>
             <div class="col-sm-6 portfolio-item">
 
                 <a href="http://www.wpst.com/" target='_blank'>
@@ -424,13 +424,13 @@
                     </a>
                 </div>
                             <div class="col-sm-6 portfolio-item">
-                <a href="http://www.goarmy.com/" target='_blank'>
+<!--                 <a href="http://www.goarmy.com/" target='_blank'>
                         <img src="img/sponsors/usarmy.jpg" class="img-responsive" alt="">
-                    </a>
+                    </a> -->
                 </div>
 
             </div>
- -->
+
             <div class="row">
             <h3> Silver </h3>
                                 <div class="col-sm-6 portfolio-item">
@@ -450,6 +450,8 @@
 
 
             </div>
+
+
 
             <div class="row">
             <h4> Bronze </h4>
