--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/mamadude.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/mamadude2.png" class="img-responsive" alt="">
                     </a>
                 </div>
 
@@ -905,7 +905,7 @@ Pace Council for Civic Values
                         <div class="modal-body">
                             <h2>Mama Dudes</h2>
                            <hr class="star-primary">
-                            <img src="img/portfolio/mamadude.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/mamadude2.png" class="img-responsive img-centered" alt="">
                                 
   <div>Nestled in Hamilton, New Jersey, Mama Dude's was founded in August, 2016 was a strict focus on utilizing the best that central New Jersey has to offer. 
 
