--- a/index.html
+++ b/index.html
@@ -389,11 +389,11 @@
          <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Causes 2017 -- Coming Soon!</h2>
+                    <h2>Causes 2017</h2>
                     <hr class="star-primary">
                 </div>
             </div>
-          <!--   <div class="row">
+            <div class="row">
                 <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModalPack" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -414,7 +414,7 @@
                         <img src="img/cause/meals.png" class="img-responsive" alt="">
                     </a>
                 </div>
-            </div> -->
+            </div>
         </div>
     </section>
 
@@ -1583,7 +1583,7 @@ Dump-N-Roll’s mission is to create the first sustainable philanthropic focused
                             <img src="img/cause/finalPacking.png" class="img-responsive img-centered" alt="">
 
                             <p>
-                            Proceeds from TruckFest 2016 will support the  <a target='_blank' href="http://www.shupprinceton.org/">Send Hunger Packing Initiative </a>, a collaboration between the <a target='_blank' href="http://mercerstreetfriends.org/">Mercer Street Friends Food Bank </a>  and the <a target='_blank' href="http://www.trentonsoupkitchen.org/">Trenton Area Soup Kitchen (TASK) </a> , which provides low-income schoolchildren with nutritious meal packs for the weekends. Though Princeton is considered a prosperous community, one in eight students in the Princeton public schools are eligible for free or reduced-tickets school lunches, and can thus participate in this program.
+                            Proceeds from TruckFest 2017 will support the  <a target='_blank' href="http://www.shupprinceton.org/">Send Hunger Packing Initiative </a>, a collaboration between the <a target='_blank' href="http://mercerstreetfriends.org/">Mercer Street Friends Food Bank </a>  and the <a target='_blank' href="http://www.trentonsoupkitchen.org/">Trenton Area Soup Kitchen (TASK) </a> , which provides low-income schoolchildren with nutritious meal packs for the weekends. Though Princeton is considered a prosperous community, one in eight students in the Princeton public schools are eligible for free or reduced-tickets school lunches, and can thus participate in this program.
                         </p>
 
 
@@ -1613,7 +1613,7 @@ Dump-N-Roll’s mission is to create the first sustainable philanthropic focused
                             <p>
 
 
-Proceeds from TruckFest 2016 will support <a target='_blank' href="http://www.mowte.org/">Meals on Wheels of Trenton/Ewing </a> , a non-profit organization that provides nutritious meals and other services to homebound locals in efforts to promote their independence, dignity, health and wellbeing. The consequences of child and adult hunger are very serious. Children from families that struggle with food insecurity are more likely to do poorly on tests, not attend class, and have difficulty getting along with their peers. Princeton TruckFest recognizes the severity of this social issue and wants to contribute to the fight against it.</p>
+Proceeds from TruckFest 2017 will support <a target='_blank' href="http://www.mowte.org/">Meals on Wheels of Trenton/Ewing </a> , a non-profit organization that provides nutritious meals and other services to homebound locals in efforts to promote their independence, dignity, health and wellbeing. The consequences of child and adult hunger are very serious. Children from families that struggle with food insecurity are more likely to do poorly on tests, not attend class, and have difficulty getting along with their peers. Princeton TruckFest recognizes the severity of this social issue and wants to contribute to the fight against it.</p>
 
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
