photos, small sponsors

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                     <li class="page-scroll">
                         <a href="#donate">Donate</a>
                     </li>
+                     <li class="page-scroll">
+                        <a href="#photos">Photos</a>
+                    </li>
                     <li class="page-scroll">
                         <a href="#footer">Contact</a>
                     </li>
@@ -521,17 +524,54 @@
                 </div>
                      
             </div>
-<!-- 
+
+    <h4> Friends of Truckfest </h4>
+
+<div class="row">
                                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://smallworldcoffee.com/" target='_blank'>
-Small World Coffee
+                    <a href="http://www.triumphbrewing.com/" target='_blank'>
+Triumph Brewery
+
                     </a>
                 </div>
-                                <div class="col-sm-4 portfolio-item">
-                    <a href="http://www.lushusa.com/" target='_blank'>
-Lush                    </a>
+
+                                                <div class="col-sm-4 portfolio-item">
+                    <a href="http://gratitudeyoga.org/" target='_blank'>
+Gratitude Yoga
+                    </a>
                 </div>
- -->
+                                                <div class="col-sm-4 portfolio-item">
+                    <a href="http://www.prex.com/" target='_blank'>
+
+Princeton Record Exchange
+
+
+                    </a>
+                </div>
+                                                <div class="col-sm-4 portfolio-item">
+                    <a href="http://www.thegardentheatre.com/" target='_blank'>
+
+Garden Theater
+
+
+                    </a>
+                </div>
+                                                <div class="col-sm-4 portfolio-item">
+                    <a href="https://www.google.com/maps/dir/''/dandelion+princeton/data=!4m5!4m4!1m0!1m2!1m1!1s0x89c3e6c0f3a75509:0x72ac610d30f89729?sa=X&ved=0ahUKEwjtvJ2r5ZXTAhVH3IMKHfFFC7cQ9RcIdDAL" target='_blank'>
+
+Dandelion
+
+                    </a>
+                </div>
+                                                <div class="col-sm-4 portfolio-item">
+                    <a href="http://njarthurmurray.com/" target='_blank'>
+
+Arthur Murray Dance Studio
+
+                    </a>
+                </div>
+
+
             </div>
                            <!--  <div class="row">
 
@@ -657,6 +697,42 @@ Pure Barre
             </div>
         </div>
     </section>
+
+
+    <!-- Contact Section -->
+    <section id="photos">
+       <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Photos From Last Yaer</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 portfolio-item">
+                <img src="img/photos2016/1.jpg" class="img-responsive" alt="">
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <img src="img/photos2016/2.jpg" class="img-responsive" alt="">
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <img src="img/photos2016/3.jpg" class="img-responsive" alt="">
+            </div>
+
+                    </div>
+                            <div class="row">
+
+            <div class="col-sm-4 portfolio-item">
+                <img src="img/photos2016/4.jpg" class="img-responsive" alt="">
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <img src="img/photos2016/5.jpg" class="img-responsive" alt="">
+            </div>
+
+        </div>
+    </div>
+</section>
+
 
     <!-- Contact Section -->
 <!--     <section id="contact">
