--- a/index.html
+++ b/index.html
@@ -701,9 +701,9 @@ Pure Barre
             </div>
             <div class="row">
                
-                    <p>please donate on our <a href="https://www.tilt.com/tilts/princeton-truckfest-2016" target='_blank'>
-                                       Tilt
-                    </a>  page or email princetontruckfest@gmail.com to make a donation!
+                    <p>please donate on our <a href="https://venmo.com/Princeton-TruckFest" target='_blank'>
+                                       Venmo
+                    </a> (@Princeton-TruckFest) or email princetontruckfest@gmail.com to make a donation!
                     </p>
             </div>
         </div>
