map, sponsors, tilt

--- a/index.html
+++ b/index.html
@@ -482,9 +482,9 @@
             <h2> Gold </h2>
             <div class="col-sm-6 portfolio-item">
 
-                <a href="http://www.wpst.com/" target='_blank'>
+                <a href="http://princetonpi.com/" target='_blank'>
 
-                        <img src="img/sponsors/945.gif" class="img-responsive" alt="">
+                        <img src="img/sponsors/pi.gif" class="img-responsive" alt="">
                     </a>
                 </div>
                             <div class="col-sm-6 portfolio-item">
@@ -703,7 +703,9 @@ Pure Barre
                
                     <p>please donate on our <a href="https://venmo.com/Princeton-TruckFest" target='_blank'>
                                        Venmo
-                    </a> (@Princeton-TruckFest) or email princetontruckfest@gmail.com to make a donation!
+                    </a> (@Princeton-TruckFest), our  <a href="https://www.tilt.com/tilts/princeton-truckfest-2017" target='_blank'>
+                                       Tilt
+                    </a>,  or email princetontruckfest@gmail.com to make a donation!
                     </p>
             </div>
         </div>
