map, sponsors, tilt

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
                      <li class="page-scroll">
                         <a href="map.pdf">MAP</a>
                     </li>
-
                      <li class="page-scroll">
                         <a href="upcomingEvents.pdf">Upcoming Events</a>
                     </li>
@@ -484,7 +483,7 @@
 
                 <a href="http://princetonpi.com/" target='_blank'>
 
-                        <img src="img/sponsors/pi.gif" class="img-responsive" alt="">
+                        <img src="img/sponsors/pi.png" class="img-responsive" alt="">
                     </a>
                 </div>
                             <div class="col-sm-6 portfolio-item">
