--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@ Pure Barre
        <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Photos From Last Yaer</h2>
+                <h2>Photos From Last Year</h2>
                 <hr class="star-primary">
             </div>
         </div>
